# scrimmage

./: CMakeLists.txt
cmake/Modules/: FindAsio.cmake  MacroCommonPaths.cmake
docs/source/tutorials/: multiple-local-runs.rst
include/scrimmage/common/: Postgres.h
include/scrimmage/plugins/autonomy/ArduPilot/: ArduPilot.h  ArduPilot.xml
include/scrimmage/plugins/autonomy/Straight/: Straight.h
include/scrimmage/plugins/interaction/GroundCollision/: GroundCollision.h
include/scrimmage/plugins/metrics/CPA/: CPA.h
include/scrimmage/plugins/motion/Multirotor/: Multirotor.h  Multirotor.xml
include/scrimmage/plugins/network/SphereNetwork/: SphereNetwork.h  SphereNetwork.xml
missions/: arducopter.xml  batch-example-mission.xml  batch-ranges.xml  new-ranges-mission.xml  new-ranges.xml  straight.xml
scripts/: csv_to_postgres.py  generate_scenarios.py  run_experiments.py  temp.py
src/: CMakeLists.txt
src/common/: Postgres.cpp
src/parse/: MissionParse.cpp
src/plugins/autonomy/ArduPilot/: ArduPilot.cpp  CMakeLists.txt
src/plugins/autonomy/Straight/: Straight.cpp
src/plugins/interaction/GroundCollision/: GroundCollision.cpp
src/plugins/metrics/CPA/: CPA.cpp
src/plugins/motion/Multirotor/: Multirotor.cpp
src/plugins/network/SphereNetwork/: SphereNetwork.cpp
src/simcontrol/: SimControl.cpp
